Modeler Preferences refactoring
... pulling prefs locator that should be emulated by the MCP server
out of the prefs repository that has a lot of MOdeler lifecycle logic